[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/lobby_panel.gd" type="Script" id=1]

[node name="LobbyPanel" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -304.0
margin_top = -165.0
margin_right = 304.0
margin_bottom = 166.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 601.0
margin_bottom = 324.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 594.0
margin_bottom = 317.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 594.0
margin_bottom = 14.0
text = "Players in Lobby"

[node name="PlayerList" type="ItemList" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 594.0
margin_bottom = 289.0
size_flags_vertical = 3

[node name="Controls" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 293.0
margin_right = 594.0
margin_bottom = 317.0

[node name="DisconnectButton" type="Button" parent="MarginContainer/VBoxContainer/Controls"]
margin_right = 84.0
margin_bottom = 24.0
text = "Disconnect"

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/Controls"]
margin_left = 88.0
margin_right = 171.0
margin_bottom = 24.0
text = "Start Game"

[node name="ReadyButton" type="CheckBox" parent="MarginContainer/VBoxContainer/Controls"]
margin_left = 175.0
margin_right = 241.0
margin_bottom = 24.0
text = "Ready"

[node name="MusicButton" type="CheckBox" parent="MarginContainer/VBoxContainer/Controls"]
margin_left = 245.0
margin_right = 311.0
margin_bottom = 24.0
pressed = true
text = "Music"

[node name="VoicesButton" type="CheckBox" parent="MarginContainer/VBoxContainer/Controls"]
margin_left = 315.0
margin_right = 385.0
margin_bottom = 24.0
pressed = true
text = "Voices"

[node name="SoundsButton" type="CheckBox" parent="MarginContainer/VBoxContainer/Controls"]
margin_left = 389.0
margin_right = 502.0
margin_bottom = 24.0
pressed = true
text = "Sound Effects"
